# devfest-lecce-be

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  cloudbuild.yaml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
badges/: models.py  serializers.py  urls.py  views.py
badges/migrations/: 0001_initial.py
conferences/: models.py  serializers.py  urls.py
conferences/migrations/: 0001_initial.py
devfest_lecce_2025_be/: asgi.py  run.sh  settings.py  urls.py  wsgi.py
devfest_lecce_2025_be/app/: asgi.py  authentication.py  settings.py  throttling.py  urls.py  utils.py  wsgi.py
devfest_lecce_2025_be/badges/: admin.py  models.py  serializers.py  urls.py  views.py
devfest_lecce_2025_be/badges/migrations/: 0001_initial.py  0002_alter_badge_picture.py  (+10 more)
devfest_lecce_2025_be/conferences/: admin.py  models.py  serializers.py  urls.py  views.py
devfest_lecce_2025_be/connections/: admin.py  models.py  serializers.py  urls.py  views.py
devfest_lecce_2025_be/leaderboard/: urls.py  views.py
devfest_lecce_2025_be/rooms/: admin.py  models.py  serializers.py  urls.py  views.py
devfest_lecce_2025_be/speakers/: admin.py  models.py  serializers.py  urls.py  views.py
devfest_lecce_2025_be/users/: admin.py  models.py  serializers.py  urls.py  views.py
infrastructure/: .terraform.lock.hcl  README.md  main.tf  variables.tf
infrastructure/backend/: main.tf  output.tf  variables.tf
infrastructure/db/: main.tf  output.tf  variables.tf
infrastructure/storage/: main.tf  output.tf
schedule/: models.py
speakers/: models.py
(+15 files in other folders)
