[tool.poetry]
name = "devfest-lecce-2025-be"
version = "0.1.0"
description = ""
authors = ["Riccardo Tornesello <riccardo.tornesello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.2.4"
djangorestframework = "^3.16.0"
django-storages = {extras = ["google"], version = "^1.14.6"}
pillow = "^11.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
