[project]
name = "devfest-lecce-2025-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Riccardo Tornesello", email = "riccardo.tornesello@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.4",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.0",
    "pillow>=11.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
